--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "marked": "^0.3.6",
     "react-scripts": "0.9.5"
   },
@@ -17,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   }
 }
